[package]
name = "error-handling"
version = "0.1.0"
authors = ["Jose <huguanzhou123@sina.com>"]
edition = "2018"

[profile.release]
panic = 'abort'     # Add this to indicate: when in release mode, panicking will immediately abort
                    #   without "unwinding" (cleaning up stack).

[dependencies]
